--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,21 @@
 version: 2.1
 
 jobs:
-  build:
+  build-and-package:
     macos:
       xcode: 12.5.1
+    working_directory: /tmp
     steps:
       - checkout
       - run:
           name: Build Application
           command: make
-
+      - run:
+          name: Package
+          command: zip -r BtBatStat.zip ./dist/BtBatStat.app
+      - store_artifacts:
+          path: /tmp/BtBatStat.zip
 workflows:
   sample:
     jobs:
-      - build
+      - build-and-package
